--- a/main.html
+++ b/main.html
@@ -4,10 +4,72 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>HTML Assignment 3</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<caption>HTML Assignment #3</caption>
+	<table id="table-1" class="middle" border="">
+		<tr>
+			<td id="t11">left&nbsp;</td>
+			<td id="t12">center&nbsp;</td>
+			<td id="t13">right&nbsp;</td>
+		</tr>
+		<tr class="center">
+			<td>left&nbsp;</td>
+            <td>center&nbsp;</td>
+			<td>right&nbsp;</td>
+		</tr>
+		<tr class="right">
+			<td>left&nbsp;</td>
+			<td>center&nbsp;&nbsp;</td>
+			<td>right&nbsp;</td>
+		</tr>
+	</table>
+	<table id="table-2" class="middle" border="1">
+     <tr>
+		 <td id="t21" colspan="6"></td>
+	 </tr>
+		<tr>
+			<td rowspan="4"></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td colspan="3" rowspan="2"></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+		    <td></td>
+		</tr>
+		<tr>
+			<td></td>
+		    <td></td>
+			<td></td>
+		    <td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td colspan="6"></td>
+		</tr>
+	</table>
+	<table class="middle" id="table-3" border="1">
+		<tr class="green">
+			<td></td>
+		</tr>
+		<tr>
+			<td id="t-image"><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="Image in Table"></td>
+		</tr>
+		<tr class="blue">
+			<td></td>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
