--- a/main.html
+++ b/main.html
@@ -12,21 +12,21 @@
 	<caption>HTML Assignment #3</caption>
 	<table id="table-1" class="middle" border="">
 		<tr>
-			<td id="t11">left&nbsp;</td>
-			<td id="t12">center&nbsp;</td>
-			<td id="t13">right&nbsp;</td>
+			<td id="t11">left</td>
+			<td id="t12">center</td>
+			<td id="t13">right</td>
 		</tr>
 		<tr class="center">
-			<td>left&nbsp;</td>
-            <td>center&nbsp;</td>
-			<td>right&nbsp;</td>
+			<td>left</td>
+            <td>center</td>
+			<td class="right">right</td>
 		</tr>
-		<tr class="right">
-			<td>left&nbsp;</td>
-			<td>center&nbsp;&nbsp;</td>
-			<td>right&nbsp;</td>
+		<tr >
+			<td>left</td>
+			<td>center</td>
+			<td class="right">right</td>
 		</tr>
-	</table>
+	</table><br>
 	<table id="table-2" class="middle" border="1">
      <tr>
 		 <td id="t21" colspan="6"></td>
@@ -58,7 +58,7 @@
 		<tr>
 			<td colspan="6"></td>
 		</tr>
-	</table>
+	</table><br>
 	<table class="middle" id="table-3" border="1">
 		<tr class="green">
 			<td></td>
