--- a/main.html
+++ b/main.html
@@ -9,21 +9,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<caption>HTML Assignment #3</caption>
-	<table id="table-1" class="middle" border="">
+	<table id="table-1" class="middle" border="1">
+		<caption>HTML Assignment #3</caption>
 		<tr>
 			<td id="t11">left</td>
 			<td id="t12">center</td>
 			<td id="t13">right</td>
 		</tr>
-		<tr class="center">
-			<td>left</td>
-            <td>center</td>
-			<td class="right">right</td>
+		<tr >
+			<td class="center">left</td>
+            <td class="center">center</td>
+			<td class="center">right</td>
 		</tr>
 		<tr >
-			<td>left</td>
-			<td>center</td>
+			<td class="right">left</td>
+			<td class="right">center</td>
 			<td class="right">right</td>
 		</tr>
 	</table><br>
